public/rushchad.css
.fixedBottomRight {
    position: fixed;
    bottom: 0px;
    min-width: 320px;
    max-width: 100%;

}

.panel-photo {

    width:100%;
    height:auto;
}

.picture-carousel {
    min-height: 300px;
    max-height: 500px;
    background-color: black;
}
.absolute-positioning {
    position: fixed;
}
.chat-scroll {
    max-height: 400px;
    overflow-y: scroll;
    width:100%;
    max-width: 300px;

}
.chat-bar-button {
    min-width: 320px;
    max-width: 100%;
}

.fixed-panel {
    min-height: 300px;
    max-height: 300px;
}

.table td {
    text-align: center;
}

.align-left {
    text-align: left;
}

.align-right {
    text-align: right;
}


.table tbody>tr>td.vert-align{
    vertical-align: middle;
}

.top-bottom-space {
    border-top: 1px solid #ccc;
    padding-top: 6px;
    padding-bottom: 6px;
}

.align-center {
    text-align: center;
}

.align-vertical {
    display: flex;
    align-items: center;
}

.rsr-root {
    vertical-align: middle;
    display: inline-block; }

.rsr--editing:hover {
    cursor: pointer; }

.rsr {
    position: relative;
    vertical-align: middle;
    display: inline-block;
    color: #e3e3e3;
    overflow: hidden; }

.rsr__stars {
    position: absolute;
    left: 0;
    top: 0;
    white-space: nowrap;
    overflow: hidden;
    color: #F5A71B;
    -webkit-transition: all 0.01s;
    -moz-transition: all 0.01s;
    transition: all 0.01s; }

.rsr__caption {
    font-size: 1.25em;
    vertical-align: middle;
    margin-right: 0.5em; }

.rsr--disabled .rsr-container:hover {
    cursor: not-allowed; }

